--- a/scratch film2.html
+++ b/scratch film2.html
@@ -10,7 +10,8 @@
 <footer>
 <center>
 <nav>
-<a href="scratch film2.html">episode 2</a>
+<a href="scratch film3.html">episode 3</a>
+<a href="index.html">Back</a>
 </nav>
 </center>
 </footer>
